# dummy_notipy

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
docker/: api.Dockerfile  init.sql
notipy/: README.md  pyproject.toml  start.sh
notipy-app/: package-lock.json  package.json
notipy-app/src/: App.tsx  Notifications.tsx  api.ts
notipy/src/notipy/: __init__.py  __main__.py
notipy/src/notipy/api/: user.py
notipy/src/notipy/models/: __init__.py  notification.py  user.py
notipy/src/notipy/services/: notification.py  user.py
notipy/src/notipy/utils/: db.py
