[project]
name = "notipy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jordao Rosario (engylemure)", email = "jordao.rosario01@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.3",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.3",
    "websockets>=12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"notipy" = "notipy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notipy"]
